syntax = "proto3";

option go_package = "../pb;pb";

import "google/protobuf/timestamp.proto";

service CommentService {
    rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {}

    rpc GetCommentByArticleId(GetCommentByArticleIdRequest) returns (GetCommentByArticleIdResponse) {}

}

message Comment {
    int32 id = 1;
    int32 article_id = 2;
    int32 commentator_id = 3;
    string content = 4;

    // 创建时间
    google.protobuf.Timestamp create_time = 5;
    // 更新时间
    google.protobuf.Timestamp update_time = 6;
}

message CreateCommentRequest {
    int32 article_id = 1;
    int32 commentator_id = 2;
    string content = 3;
}

message CreateCommentResponse {
    Comment comment = 1;
}

message GetCommentByArticleIdRequest {
    int32 id = 1;
}

message GetCommentByArticleIdResponse {
    repeated Comment comments = 1;
}
